# training-vs-learning

./: .gitignore  ANALYSIS.md  finetune.py  pyproject.toml  tracking.py  verify_setup.py  visualize.py
data/: build_datasets.py  generate_corpus.py
probes/: factual_recall.py  out_of_distribution.py  reasoning.py
